snapshots/syntax/library/functions/string/formatcurrency/formatcurrency_addition.snap
---
source: src/syntax/library/functions/string/formatcurrency.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: total
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FormatCurrency
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: subtotal
                            - kind: Whitespace
                              text: " "
                            - kind: AdditionOperator
                              text: +
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: tax
                        - kind: Whitespace
                          text: " "
                        - kind: AdditionOperator
                          text: +
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: shipping
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
